kubernetes/development/node-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: 22monk/solar-system:da34318b63436c9cf9fb5d6a4bb9eb9bc069b216
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: default
spec:
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
