kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solar-system
  name: solar-system
  namespace: _{_NAMESPACE_}_
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: solar-system
  loadBalancerSourceRanges:
    - 0.0.0.0/0  # Allows access from anywhere
